      62_new_list_bad_pending_requests,
      67_update_handle_old_versions,
      68_update_catalan,
      78_DeprecationWarning,
      80_fix_string_search.
      Refresh all others. Many thanks to Mark Sapiro and
      Paul Wise for the help in cleaning this up.
    + Fixes bounce handling NotAMemberError (closes: #517997).
  * Various packaging cleanups, upgrade debhelper to level 7.

 -- Thijs Kinkhorst <thijs@debian.org>  Tue,  3 Mar 2009 15:31:55 +0100

mailman (1:2.1.11-11) unstable; urgency=high

  [ Debconf Translations ]
  * Updated Vietnamese, thanks Clytie Siddall (closes: #513097).

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 26 Jan 2009 13:42:33 +0100

mailman (1:2.1.11-10) unstable; urgency=low

  [ Debconf Translations ]
  * Updated Catalan, thanks David Planella.

 -- Thijs Kinkhorst <thijs@debian.org>  Wed, 07 Jan 2009 23:09:56 +0100

mailman (1:2.1.11-9) unstable; urgency=high

  [ Debconf Translations ]
  * Updated Spanish, thanks Javier Fernández-Sanguino (closes: #510023).
  * Updated Japanese, thanks Kenshi Muto (closes: #509996).
  * Updated Galician, thanks Marce Villarino (closes: #510002).
  * Updated French, thanks Christian Perrier (closes: #510016).
  * Updated Italian, thanks Luca Monducci (closes: #510107).
  * Updated Swedish, thanks Martin Bagge and Daniel Nylander
    (closes: #510206).
  * Updated Czech, thanks Miroslav Kure (closes: #510230).
  * Updated German, thanks Holger Wansing (closes: #510361).
  * Updated Portuguese, thanks Miguel Figueiredo (closes: 510556).
  * Updated Russian, thanks Sergey Alyoshin (closes: #510614).

 -- Thijs Kinkhorst <thijs@debian.org>  Sun, 04 Jan 2009 12:30:58 +0100

mailman (1:2.1.11-8) unstable; urgency=low

  * Do not stop installation when queue files are present, and this is
    an upgrade from the same version that was already installed. Based
    on a patch by Marcin Owsiany (closes: #468569).
  * When queue files present, offer the administrator the option to