@@ -15,8 +15,10 @@ mailman (1:2.1.12-1) UNRELEASED; urgency=low
       Paul Wise for the help in cleaning this up.
     + Fixes bounce handling NotAMemberError (closes: #517997).
   * Various packaging cleanups, upgrade debhelper to level 7.
+  * Removes embedded copy of pythonlib/email module.
+  * Checked for policy 3.8.1, no changes.
 
- -- Thijs Kinkhorst <thijs@debian.org>  Tue,  3 Mar 2009 15:31:55 +0100
+ -- Thijs Kinkhorst <thijs@debian.org>  Sat, 14 Mar 2009 14:14:19 +0100
 
 mailman (1:2.1.11-11) unstable; urgency=high
 
